[package]
name = "walkbuilder_example"
version = "0.1.0"
authors = ["Natalie Davidson <davidson@cloudflare.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.16"
failure = "0.1.8"
regex = "1"
lazy_static = "1.4.0"